turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:22: error: not found: value etat
	rule(etat)(couleurActuelle)(MVT_SUIVANT) match
             ^